--- a/src/ui/_styles/fonts.css
+++ b/src/ui/_styles/fonts.css
@@ -10,6 +10,8 @@
   --font-size-small: 12px;
   --font-size-medium: 14px;
   --font-size-big: 24px;
+  --font-size-bigger: 30px;
+  --font-size-large: 36px;
   --line-height-small: 16px;
   --line-height-big: 32px;
   --bold: 700;
