--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #e5e5e5;
-}
 .pokedex__container {
   display: flex;
   flex-direction: column;
@@ -15,14 +8,14 @@ body {
   background-color: var(--white);
 }
 
-.pokedex__nav-bar {
+/* .pokedex__nav-bar {
   display: flex;
   align-items: center;
   width: 100%;
   height: 74px;
   border-bottom: 1px solid var(--light-gray);
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-}
+} */
 
 .pokedex__nav-bar img {
   margin-left: 134px;
