--- a/src/ui/components/PokeContainer/Pokedex.css
+++ b/src/ui/components/PokeContainer/Pokedex.css
@@ -1,6 +1,31 @@
 .pokedex-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 28px;
+}
+
+/* .pokedex-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 28px;
+} */
+
+.null-search {
+  border: 1px solid red;
+}
+/* Media query para dispositivos móviles */
+@media (max-width: 767px) {
+  .pokedex-container {
+    grid-template-columns: repeat(1, minmax(280px, 1fr));
+    gap: 16px;
+  }
+}
+
+/* Media query para tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .pokedex-container {
+    grid-template-columns: repeat(2, minmax(280px, 1fr));
+    gap: 20px;
+  }
 }
