--- a/src/ui/components/PokeContainer/Searchbar.css
+++ b/src/ui/components/PokeContainer/Searchbar.css
@@ -5,19 +5,38 @@
 }
 
 .searchbar {
-  width: 550px;
+  width: 750px;
   height: 40px;
   padding-left: 35px;
   background-color: var(--grayscale-white);
-  border: 1px solid var(--grayscale__light--gray);
+  border: 1px solid var(--grayscale__medium--gray);
   border-radius: var(--tiny);
   color: var(--grayscale-white);
+  font-size: 16px;
 }
 
 .searchbar-icon {
   position: absolute;
   top: 50%;
-  left: 335px;
+  left: 10px;
   transform: translateY(-50%);
   pointer-events: none;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 767px) {
+  .searchbar {
+    width: 280px;
+    height: 30px;
+    font-size: 14px;
+  }
+}
+
+/* Media query para tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .searchbar {
+    width: 570px;
+    height: 35px;
+    font-size: 14px;
+  }
 }
