--- a/src/ui/components/Home.css
+++ b/src/ui/components/Home.css
@@ -7,7 +7,6 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  /* gap: 40px; */
   width: 1200px;
   background-color: var(--grayscale__white);
 }
@@ -15,9 +14,10 @@ body {
 .main-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 30px 0;
   gap: 30px;
-  border: 1px solid red;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .footer-container {
@@ -25,4 +25,36 @@ body {
   flex-direction: column;
   align-items: center;
   padding-bottom: 30px;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 767px) {
+  .container {
+    width: 110%;
+  }
+
+  .main-container {
+    padding: 20px 0;
+    gap: 20px;
+  }
+
+  .footer-container {
+    padding-bottom: 20px;
+  }
+}
+
+/* Media query para tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .container {
+    width: 120%;
+  }
+
+  .main-container {
+    padding: 25px 0;
+    gap: 25px;
+  }
+
+  .footer-container {
+    padding-bottom: 25px;
+  }
 }
